--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,12 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Портфолио веб-разработчика - современные веб-решения, адаптивный дизайн и высокая производительность"
-    />
-    <meta name="keywords" content="веб-разработка, портфолио, React, Next.js, адаптивный дизайн, современные технологии" />
-    <meta name="author" content="Нурдаулет Юсупов" />
-    <meta property="og:title" content="Портфолио веб-разработчика" />
-    <meta property="og:description" content="Современные веб-решения, адаптивный дизайн и высокая производительность" />
-    <meta property="og:type" content="website" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Нурдаулет Юсупов | Веб-разработчик</title>
+    <meta http-equiv="refresh" content="0;url=/" />
   </head>
   <body>
-    <noscript>Для работы этого приложения необходимо включить JavaScript.</noscript>
-    <div id="root"></div>
+    <p>Перенаправление...</p>
   </body>
 </html> 
